@@ -1,8 +1,8 @@
 Package: MPTinR
 Type: Package
 Title: Analyze Multinomial Processing Tree Models
-Version: 0.8.2
-Date: 2012-01-31
+Version: 0.8.3
+Date: 2012-02-06
 Author: Henrik Singmann and David Kellen
 Maintainer: Henrik Singmann <henrik.singmann@psychologie.uni-freiburg.de>
 Description: The package provides a user-friendly way for analysis of multinomial processing tree (MPT) models (e.g.,  Riefer, D. M., and Batchelder, W. H. [1988]. Multinomial modeling and the measurement of cognitive processes. Psychological Review, 95, 318-339) for individual and multi-individual data. The main functions perform model fitting and model selection. Model selection can be done using e.g. the minimum description length measure based on the Fischer information approximation (FIA). The model and restrictions can easily be specified in external files. The 'classical' .EQN file format for model files is also supported. Besides MPTs MPTinR can fit a wide variety of other cognitive models such as SDT models (see fit.model). MPTinR supports multicore fitting using the snowfall package.
